--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.0.0",
     "react-geolocated": "^3.0.1",
     "react-icons": "^3.9.0",
     "react-leaflet": "^2.6.3",
@@ -33,6 +34,8 @@
     "react-responsive-carousel": "^3.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
+    "react-spinners": "^0.8.3",
     "readline": "^1.3.0"
   },
   "scripts": {
